add og + twitter meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/icon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- open graph meta tags -->
+        <meta property="og:url" content="http://spurhacks.com">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="SpurHacks 2025">
+        <meta property="og:description" content="SpurHacks is a community-driven hackathon where innovators of all backgrounds come together to learn, create, and shape the future of technology.">
+        <meta property="og:image" content="https://spurhacks.com/spur_hacks_banner.png">
+        <meta property="og:image:width" content="600">
+        <meta property="og:image:height" content="600">
+
+        <!-- twitter meta tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="spurhacks.com">
+        <meta property="twitter:url" content="http://spurhacks.com">
+        <meta name="twitter:title" content="SpurHacks 2025">
+        <meta name="twitter:description" content="SpurHacks is a community-driven hackathon where innovators of all backgrounds come together to learn, create, and shape the future of technology.">
+        <meta name="twitter:image" content="https://spurhacks.com/spur_hacks_banner.png">
+
         <title> SpurHacks 2025 </title>
     </head>
 
